--- a/translations/validators.et.yaml
+++ b/translations/validators.et.yaml
@@ -98,6 +98,15 @@ Error: Viga
 'This value is not a valid CSS color.': 'See väärtus pole korrektne CSS-i värv.'
 'This value is not a valid CIDR notation.': 'See väärtus pole korrektne CIDR võrguaadress.'
 'The value of the netmask should be between {{ min }} and {{ max }}.': 'Võrgumaski väärtus peaks olema vahemikus {{ min }} kuni {{ max }}.'
+'The filename is too long. It should have {{ filename_max_length }} character or less.|The filename is too long. It should have {{ filename_max_length }} characters or less.': 'Failinimi on liiga pikk. See peaks olema {{ filename_max_length }} tähemärk või vähem.|Failinimi on liiga pikk. See peaks olema {{ filename_max_length }} tähemärki või vähem.'
+'The password strength is too low. Please use a stronger password.': 'Parooli tugevus on liiga madal. Palun kasuta tugevamat parooli.'
+'This value contains characters that are not allowed by the current restriction-level.': 'See väärtus sisaldab tähemärke, mida praegune piirangu tase ei luba.'
+'Using invisible characters is not allowed.': 'Mittenähtavate tähemärkide kasutamine ei ole lubatud.'
+'Mixing numbers from different scripts is not allowed.': 'Eri kirjasüsteemidest pärit numbrite koos kasutamine pole lubatud.'
+'Using hidden overlay characters is not allowed.': 'Peidetud tähemärkide kasutamine pole lubatud.'
+'The extension of the file is invalid ({{ extension }}). Allowed extensions are {{ extensions }}.': 'Faili laiend on vigane ({{ extension }}). Lubatud laiendid on {{ extensions }}.'
+'The detected character encoding is invalid ({{ detected }}). Allowed encodings are {{ encodings }}.': 'Tuvastatud teksti kodeering on vigane ({{ detected }}). Lubatud kodeeringud on {{ encodings }}.'
+'This value is not a valid MAC address.': 'See väärtus ei ole kehtiv MAC-aadress.'
 'This form should not contain extra fields.': 'Väljade grupp ei tohiks sisalda lisaväljasid.'
 'The uploaded file was too large. Please try to upload a smaller file.': 'Üleslaaditud fail oli liiga suur. Palun proovi uuesti väiksema failiga.'
 'The CSRF token is invalid. Please try to resubmit the form.': 'CSRF-märgis on vigane. Palun proovi vormi uuesti esitada.'
